--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2021"
 
 [dependencies]
 ax5043_derive = { path = "../ax5043_derive" }
-bitflags = "1.3.2"
+bitflags = "2.3.1"
 clap = { version = "4.2.2", features = ["derive"] }
-ctrlc = "3.2.5"
+crossterm = "0.27"
 gpiod = "0.2.3"
-mio = { version = "0.8.6", features = ["net", "os-poll"] }
-spidev = "0.5.1"
+mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
+mio-signals = "0.2.0"
+ratatui = "0.23"
+spidev = "0.6.0"
+timerfd = "1.5.0"
