--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -13,6 +13,7 @@ crossterm = "0.27"
 gpiod = "0.2.3"
 mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
 mio-signals = "0.2.0"
+num_enum = "0.7.0"
 ratatui = "0.23"
 spidev = "0.6.0"
 timerfd = "1.5.0"
