--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -12,6 +12,7 @@ bitflags = "2.3.1"
 clap = { version = "4.2.2", features = ["derive"] }
 crossterm = "0.27"
 gpiod = "0.2.3"
+itertools = "0.12.0"
 mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
 mio-signals = "0.2.0"
 num_enum = "0.7.0"
