Split examples only deps into [dev-dependencies]
This is the intended use of the section, it means that any outside users
of the crate won't need the example specific stuff, like mio or clap.
Currently the crates crc and gpiod are only used in examples but I'd
eventually like to move that functionality up into the library so they
can stay where they are for now. Anyhow should only be used in the
examples but config_rpi uses it currently and needs to be refactored
onto thiserror.

[dev-dependencies] would also be used for testing libraries, once I get
to that.

--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -9,15 +9,17 @@ edition = "2021"
 anyhow = "1.0.75"
 ax5043_derive = { path = "../ax5043_derive" }
 bitflags = "2.3.1"
-clap = { version = "4.2.2", features = ["derive"] }
 crc = "3.0.1"
-crossterm = "0.27"
 gpiod = "0.2.3"
-itertools = "0.12.0"
-mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
-mio-signals = "0.2.0"
 num_enum = "0.7.0"
 ratatui = "0.23"
 spidev = "0.6.0"
 thiserror = "1.0.50"
+
+[dev-dependencies]
+clap = { version = "4.2.2", features = ["derive"] }
+crossterm = "0.27"
+itertools = "0.12.0"
+mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
+mio-signals = "0.2.0"
 timerfd = "1.5.0"
