--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -22,4 +22,5 @@ crossterm = "0.27"
 itertools = "0.12.0"
 mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
 mio-signals = "0.2.0"
+proptest = "1.4.0"
 timerfd = "1.5.0"
