--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "ax5043"
 version = "0.1.0"
+authors = ["Theo Hill <Theo0x48@gmail.com>"]
 edition = "2021"
+description = "AX5043 userspace lib, C3 UHF/LBand driver"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,19 +12,26 @@ edition = "2021"
 anyhow = "1.0.75"
 ax5043_derive = { path = "../ax5043_derive" }
 bitflags = "2.3.1"
+clap = { version = "4.2.2", features = ["derive"] }
 crc = "3.0.1"
 gpiod = "0.2.3"
+mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
+mio-signals = "0.2.0"
 num_enum = "0.7.0"
 ratatui = "0.23"
 spidev = "0.6.0"
 thiserror = "1.0.50"
 
 [dev-dependencies]
-clap = { version = "4.2.2", features = ["derive"] }
 crossterm = "0.27"
 itertools = "0.12.0"
-mio = { version = "0.8.8", features = ["net", "os-poll", "os-ext"] }
-mio-signals = "0.2.0"
 proptest = "1.4.0"
 proptest-derive = "0.4.0"
 timerfd = "1.5.0"
+
+[package.metadata.deb]
+maintainer-scripts = "debian/"
+systemd-units = [
+    { unit-name = "lband" },
+    { unit-name = "uhf" },
+]
