Fix debian package dependencies
cargo-deb seems to be grabbing the global libc instead of the custom
toolchain's one. It thinks libc is 2.35, which is later than the C3's
and toolchain's 2.31. As far as I can tell the actual programs are built
with 2.31 so I've put in the correct version by hand.

--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -31,6 +31,9 @@ timerfd = "1.5.0"
 
 [package.metadata.deb]
 maintainer-scripts = "debian/"
+# cargo-deb somehow resolves the wrong libc (2.35 currently)
+# even though the cross toolchain uses 2.31.
+depends = "libc6:armhf (>= 2.31)"
 systemd-units = [
     { unit-name = "lband" },
     { unit-name = "uhf" },
