--- a/.cargo/config
+++ b/.cargo/config
@@ -1,3 +1,4 @@
 [target.armv7-unknown-linux-gnueabihf]
 linker = "./cross-pi-gcc-10.3.0-2/bin/arm-linux-gnueabihf-gcc"
+#linker = "arm-linux-gnueabihf-gcc"
 runner = "./runner.sh"
