--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -10,7 +10,8 @@ license = "GPL-3.0-or-later"
 
 [dependencies]
 anyhow = "1.0.81"
-bitflags = "2.5.0"
+bitflags = { version = "2.5.0", features = ["serde"] }
+ciborium = "0.2.2"
 clap = { version = "4.5.4", features = ["derive"] }
 crc = "3.0.1"
 gpiod = "0.2.3"
@@ -18,6 +19,7 @@ mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
 mio-signals = "0.2.0"
 num_enum = "0.7.2"
 ratatui = "0.26"
+serde = { version = "1.0", features = ["derive"] }
 spidev = "0.6.0"
 thiserror = "1.0.58"
 
