First pass at TOML based config
This splits the configuration out into a toml file, making it human
editable, and also if we want to change the config in flight it's much
smaller to upload.

It turns out it was much easier to include the toml parsing than I was
anticipating, I should have done this way sooner.

--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", features = ["derive"] }
 spidev = "0.6.0"
 thiserror = "1.0.58"
 timerfd = "1.6.0"
+toml = "0.8.13"
 
 [dev-dependencies]
 crossterm = "0.27"
