--- a/ax5043/src/bin/c3-uhf-96000.toml
+++ b/ax5043/src/bin/c3-uhf-96000.toml
@@ -1,33 +1,41 @@
 [board]
-sysclk = { mode = "Z",    pullup = true,  invert = false }
-dclk   = { mode = "Z",    pullup = true,  invert = false }
-data   = { mode = "Z",    pullup = true,  invert = false }
-pwramp = { mode = "TCXO", pullup = false, invert = false }
-irq    = { mode = "IRQ",  pullup = false, invert = false }
-antsel = { mode = "Z",    pullup = true,  invert = false }
-xtal = { kind = "TCXO", freq = 48_000_000, enable = "AntSel" }
+sysclk = { mode = "Z",      pullup = true,  invert = false }
+dclk   = { mode = "Z",      pullup = true,  invert = false }
+data   = { mode = "Z",      pullup = true,  invert = false }
+pwramp = { mode = "PwrAmp", pullup = false, invert = false }
+irq    = { mode = "IRQ",    pullup = false, invert = false }
+antsel = { mode = "Z",      pullup = true,  invert = false }
+xtal = { kind = "TCXO", freq = 16_000_000, enable = "None" }
 vco = "Internal"
 filter = "Internal"
-dac = { pin = "PwrAmp" }
-adc = "ADC1"
+dac = { pin = "None" }
+adc = "None"
 
 [synth]
 freq_a = 436_500_000
 freq_b = 0
 active = "A"
 pll = { charge_pump_current = 0x02, filter_bandwidth = "Internalx1" }
-boost = { charge_pump_current = 0xc8, filter_bandwidth = "Internalx5" }
+boost = { charge_pump_current = 0xC8, filter_bandwidth = "Internalx5" }
 vco_current = "Automatic"
 lock_detector_delay = "Automatic"
 ranging_clock = "XtalDiv1024"
 
-[[channel]]
+[[channel]] # EDL
 modulation.GMSK = { ramp = "Bits1", bt = 0.5 }
 encoding = "NRZISCR"
-framing.HDLC.fec = {}
-crc.CCITT.initial = 0xFFFF
-datarate = 60_000
+framing.HDLC.fec = { }
+crc.CCITT = { initial=0xFFFF }
+datarate = 96_000
 bitorder = "MSBFirst"
+
+[[channel]] # Beacon
+modulation.GMSK = { ramp = "Bits1", bt = 0.5 }
+encoding = "NRZISCR"
+framing.HDLC.fec = { }
+crc.CCITT = { initial=0xFFFF }
+datarate = 9_600
+bitorder = "LSBFirst"
 
 [tx]
 antenna = "SingleEnded"
@@ -51,7 +59,6 @@ time_corr_frac = 4
 datarate_corr_frac = 255
 phase = 0x03
 filter = 0x03
-baseband = { phase = 0x0A, freq = 0x0A }
 amplitude = 0x06
 deviation_update = true
 ampl_agc_jump_correction = false
@@ -67,7 +74,6 @@ time_corr_frac = 32
 datarate_corr_frac = 1024
 phase = 0x03
 filter = 0x03
-baseband = { phase = 0x0D, freq = 0x0D }
 amplitude = 0x06
 deviation_update = true
 ampl_agc_jump_correction = false
@@ -76,3 +82,4 @@ ampl_averaging = false
 [stages]
 preamble1 = { timeout = { m = 0x17, e = 5 }, set = "Set0" }
 packet = "Set3"
+
