Convert gpiod to gpiocdev
While I'd like to upgrade to the libgpiod Rust bindings, that depends on
the 2.0 version of the library being deployed, which it's not looking
like it'll be soon in Debian. As an intermediate step gpiocdev looks at
least as feature complete as gpiod but it also implements AsRawFd so we
don't need a custom patch for it.

While doing the replacement I noticed that lband was setting pa_enable
when it shouldn't, so that's been removed.

--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -14,7 +14,7 @@ bitflags = { version = "2.5.0", features = ["serde"] }
 ciborium = "0.2.2"
 clap = { version = "4.5.4", features = ["derive"] }
 crc = "3.0.1"
-gpiod = "0.3.0"
+gpiocdev = "0.7.1"
 mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
 mio-signals = "0.2.0"
 num_enum = "0.7.2"
