Inform Cargo of 'card' cfg
As of rust 1.80 a new lint was introduced that warns on unexpected cfgs.
The 'card' cfg was recently added so this updates Cargo.toml with its
expected values to stop the warning.

--- a/ax5043/Cargo.toml
+++ b/ax5043/Cargo.toml
@@ -40,3 +40,6 @@ systemd-units = [
     { unit-name = "lband" },
     { unit-name = "uhf" },
 ]
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(card, values("c3", "rpi"))'] }
